- Fixes UI spacing on find page - Hides border bottom if user is not logged in

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -594,8 +594,8 @@ h5 {
   }
   .search {
     background: $darkBlue;
-    height: 28em;
-    padding: 2.5em 0em;
+    height: 27em;
+    padding: 2em 0em;
     border-top: 10px solid #273848;
     border-bottom: 10px solid #273848;
     h5{
@@ -722,7 +722,7 @@ h5 {
     }
   }
   .cards{
-    height:38.5vh;
+    height:32vh;
     padding-top: 1em;
     background: $lighterBlue;
     .card{
